# control-service

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  ninja.sh  releaseNotes.md
include/: Kepler.hpp
include/controller/: Controller.hpp  MoverConfig.hpp
include/ethercat/: DictionaryEntity.hpp  DictionaryMap.hpp  EthEnums.hpp  EthStatus.hpp  Master.hpp  SdoEx.hpp  Slave.hpp  Test.hpp  ThreadUtil.hpp  Util.hpp
include/motor/: Config.hpp  Motor.hpp
include/service/: App.hpp  MoverService.hpp
src/controller/: ControlTasks.cpp  Controller.cpp  Cycle.cpp  Data.cpp  Loop.cpp  Monitor.cpp  Tasks.cpp
src/ethercat/: Master.cpp
src/motor/: Config.cpp  DataObjects.cpp  MotorPdos.cpp  MotorTasks.cpp  PdoMapping.cpp  ReadConfig.cpp  Tasks.cpp
src/service/: App.cpp  AppTasks.cpp  Loop.cpp  Requests.cpp  Tasks.cpp
